; ModuleID = '/home/carl/AnghaBench/RetroArch/tasks/extr_task_netplay_lan_scan.c_task_netplay_lan_scan_handler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/tasks/extr_task_netplay_lan_scan.c_task_netplay_lan_scan_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_NETPLAY_DISCOVERY_CTL_LAN_CLEAR_RESPONSES = common dso_local global i32 0, align 4
@RARCH_NETPLAY_DISCOVERY_CTL_LAN_SEND_QUERY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @task_netplay_lan_scan_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @task_netplay_lan_scan_handler(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i64 (...) @init_netplay_discovery()
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load i32, i32* @RARCH_NETPLAY_DISCOVERY_CTL_LAN_CLEAR_RESPONSES, align 4
  %7 = call i32 @netplay_discovery_driver_ctl(i32 %6, i32* null)
  %8 = load i32, i32* @RARCH_NETPLAY_DISCOVERY_CTL_LAN_SEND_QUERY, align 4
  %9 = call i32 @netplay_discovery_driver_ctl(i32 %8, i32* null)
  br label %10

10:                                               ; preds = %5, %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @task_set_progress(i32* %11, i32 100)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @task_set_finished(i32* %13, i32 1)
  ret void
}

declare dso_local i64 @init_netplay_discovery(...) #1

declare dso_local i32 @netplay_discovery_driver_ctl(i32, i32*) #1

declare dso_local i32 @task_set_progress(i32*, i32) #1

declare dso_local i32 @task_set_finished(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
